--- a/src/portfolio_components/form/Form.scss
+++ b/src/portfolio_components/form/Form.scss
@@ -57,12 +57,25 @@
       display: flex;
       flex-direction: column;
       width: 100%;
+      font-family: $basicFont;
 
       .input {
+        font-family: $basicFont;
+        border-radius: 5px;
         align-items: center;
-        width: 100%;
-        margin-bottom: 12px;
+        margin: auto;
+        width: 80%;
+        margin-bottom: 18px;
+        padding-left: 5px;
       }
+    }
+
+    textarea {
+      width: 80%;
+      margin: auto;
+      border-radius: 5px;
+      padding-left: 5px;
+      height: 90px;
     }
 
     .nextui-c-hzQjrs-hyKnjc-asPlaceholder-true {
@@ -79,7 +92,7 @@
 
     button {
       width: 80px;
-      background-color: grey;
+      background-color: rgb(255, 255, 255);
       border-color: grey;
     }
   }
